# todo_app_repo

./: .env-example  .gitignore  README.md  alembic.ini  pyproject.toml
tests/: conftest.py  test_app.py  test_db.py
tests/users/: test_user_endpoints.py
todo_api/: app.py  schemas.py
todo_api/domains/todos/schemas/: TodoSchema.py
todo_api/domains/users/schemas/: UserSchema.py
todo_api/repositories/: database.py
todo_api/repositories/migrations/: env.py
todo_api/repositories/migrations/versions/: 95499e0cecac_add_new_revision.py  e7c49c3c4024_add_updated_at_column_in_users_table.py  ecaeec3ab192_initial_migration.py
todo_api/repositories/models/: database_models.py
